apply plugin: "java"

sourceCompatibility = 1.11

[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
